Fixed white bars appearing when scrolling past body on iPhoneOS/iPadOS

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,6 +49,7 @@ body {
   margin: 0;
   font-family: 'Raleway', sans-serif;
   overflow-x: hidden;
+  background-color: #0e1016;
 }
 
 a {
